website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.8.1/api/docusaurus.config.js.mdx
---
sidebar_position: 0
description: API reference for Docusaurus configuration file.
slug: /api/docusaurus-config
---

# `docusaurus.config.js`

import APITable from '@site/src/components/APITable';

:::info

參考[**配置**](../configuration.mdx)章節的入門範例。

:::

## 概述 {#overview}

`docusaurus.config.js` 包含您網站的配置，放置於網站的根目錄中。

:::note

若使用 [TypeScript](../typescript-support.mdx) 的 Docusaurus 程式碼庫，配置檔案可能命名為 `docusaurus.config.ts`。其語法與 `js` 配置檔案大致相同，僅增加型別定義。您可以在 [Docusaurus 官方網站](https://github.com/facebook/docusaurus/blob/main/website/docusaurus.config.ts)查看範例。

:::

此檔案**在 Node.js 環境中執行**，應導出一個網站配置物件，或是一個建立該物件的函式。

`docusaurus.config.js` 檔案支援：

- [**ES Modules**](https://flaviocopes.com/es-modules/)
- [**CommonJS**](https://flaviocopes.com/commonjs/)
- [**TypeScript**](../typescript-support.mdx#typing-config)

範例：

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```js title="docusaurus.config.js"
export default async function createConfigAsync() {
  return {
    title: 'Docusaurus',
    url: 'https://docusaurus.io',
    // your site config ...
  };
}
```

:::tip

參考[**宣告 `docusaurus.config.js` 的語法**](../configuration.mdx#syntax-to-declare-docusaurus-config)以獲得更完整的範例與說明。

:::

## 必填欄位 {#required-fields}

### `title` {#title}

- 類型：`string`

網站的標題。將用於元資料及瀏覽器分頁標題。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
};
```

### `url` {#url}

- 類型：`string`

網站的 URL。亦可視為頂層網域名稱。例如，`https://facebook.github.io` 是 https://facebook.github.io/metro/ 的 URL，而 `https://docusaurus.io` 是 https://docusaurus.io 的 URL。此欄位與 [`baseUrl`](#baseUrl) 欄位相關。

```js title="docusaurus.config.js"
export default {
  url: 'https://docusaurus.io',
};
```

### `baseUrl` {#baseUrl}

- 類型：`string`

網站的基礎 URL。可視為主機名稱後的路徑。例如，`/metro/` 是 https://facebook.github.io/metro/ 的基礎 URL。若 URL 無路徑，則 `baseUrl` 應設為 `/`。此欄位與 [`url`](#url) 欄位相關。前後均需包含斜線。

```js title="docusaurus.config.js"
export default {
  baseUrl: '/',
};
```

## 選填欄位 {#optional-fields}

### `favicon` {#favicon}

- 類型：`string | undefined`

網站圖示的路徑；必須為可用於連結 href 的 URL。例如，若圖示位於 `static/img/favicon.ico`：

```js title="docusaurus.config.js"
export default {
  favicon: '/img/favicon.ico',
};
```

### `trailingSlash` {#trailingSlash}

- 類型：`boolean | undefined`

允許自訂 URL/連結末尾斜線的存在與否，以及靜態 HTML 檔案的生成方式：

- `undefined`（預設值）：保持網址不變，並為 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `true`：在網址/連結末尾添加斜線，並為 `/docs/myDoc.md` 生成 `/docs/myDoc/index.html`
- `false`：移除網址/連結末尾的斜線，並為 `/docs/myDoc.md` 生成 `/docs/myDoc.html`

:::tip

每個靜態託管服務商處理靜態檔案的方式不同（此行為可能隨時間變化）。

請參閱[部署指南](../deployment.mdx)與[slorber/trailing-slash-guide](https://github.com/slorber/trailing-slash-guide)以選擇適當設定。

:::

### `i18n` {#i18n}

- 類型：`Object`

用於[網站本地化](../i18n/i18n-introduction.mdx)的國際化設定物件。

範例：

```js title="docusaurus.config.js"
export default {
  i18n: {
    defaultLocale: 'en',
    locales: ['en', 'fa'],
    path: 'i18n',
    localeConfigs: {
      en: {
        label: 'English',
        direction: 'ltr',
        htmlLang: 'en-US',
        calendar: 'gregory',
        path: 'en',
      },
      fa: {
        label: 'فارسی',
        direction: 'rtl',
        htmlLang: 'fa-IR',
        calendar: 'persian',
        path: 'fa',
      },
    },
  },
};
```

- `defaultLocale`：該語言環境會 (1) 在基礎網址中不顯示其名稱 (2) 執行 `docusaurus start` 時無需 `--locale` 參數 (3) 用於 `<link hrefLang="x-default">` 標籤
- `locales`：網站部署的語言環境清單。必須包含 `defaultLocale`。
- `path`：所有語言環境資料夾的根目錄。可為絕對路徑或相對於設定檔的路徑。預設為 `i18n`。
- `localeConfigs`：各語言環境的個別選項。
  - `label`：在語言下拉選單中顯示的標籤。
  - `direction`：`ltr`（預設）或 `rtl`（適用於[從右至左書寫的語言](https://developer.mozilla.org/en-US/docs/Glossary/rtl)如波斯語、阿拉伯語、希伯來語等）。用於選擇該語言環境的CSS與HTML meta屬性。
  - `htmlLang`：用於 `<html lang="...">`（或其他DOM標籤）和 `<link ... hreflang="...">` 的[BCP 47語言標籤](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/lang)
  - `calendar`：用於計算日期紀元的[曆法](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/Locale/calendar)。注意這不控制實際顯示的格式：`MM/DD/YYYY` 和 `DD/MM/YYYY` 都屬於 `gregory`。要選擇格式（`DD/MM/YYYY` 或 `MM/DD/YYYY`），需將語言環境名稱設為 `en-GB` 或 `en-US`（`en` 表示 `en-US`）。
  - `path`：該語言環境所有插件本地化資料夾的根目錄。將基於 `i18n.path` 解析。預設為語言環境名稱。注意：這不影響語言環境的 `baseUrl`——自訂基礎網址功能仍在開發中。

### `future` {#future}

- 類型：`Object`

`future` 設定物件允許啟用尚未穩定的實驗性功能，這些功能尚未準備好正式發布。

這也是為下個主要版本預做準備的方式，讓您能在當前版本中提前適應即將到來的重大變更。[Remix Future Flags部落格文章](https://remix.run/blog/future-flags)對此概念有詳細說明。

:::danger[次要版本中的破壞性變更]

標記為 `experimental_` 或 `unstable_` 的功能可能在**次要版本**中變更，不屬於[語意化版本控制的破壞性變更](/community/release-process)。

以 `v<MajorVersion>`（如 `v6`、`v7`）命名空間的功能是未來標記，預計在下個主要版本中預設啟用。這些功能較少變動，但我們保留變更權利。

`future` API的破壞性變更應易於處理，並會在次要/主要版本發布文章中說明。

:::

範例：

```js title="docusaurus.config.js"
export default {
  future: {
    v4: {
      removeLegacyPostBuildHeadAttribute: true,
      useCssCascadeLayers: true,
    },
    experimental_faster: {
      swcJsLoader: true,
      swcJsMinimizer: true,
      swcHtmlMinimizer: true,
      lightningCssMinimizer: true,
      rspackBundler: true,
      rspackPersistentCache: true,
      ssgWorkerThreads: true,
      mdxCrossCompilerCache: true,
    },
    experimental_storage: {
      type: 'localStorage',
      namespace: true,
    },
    experimental_router: 'hash',
  },
};
```

- `v4`: 允許預先啟用即將到來的 Docusaurus v4 破壞性變更與功能，為新版本提前準備您的網站。使用 `true` 作為啟用所有標誌的快捷方式。
  - [`removeLegacyPostBuildHeadAttribute`](https://github.com/facebook/docusaurus/pull/10435): 移除舊版 `plugin.postBuild({head})` API，該 API 阻礙了我們實施有效的 SSG 優化（[說明](https://github.com/facebook/docusaurus/pull/10850)）。
  - [`useCssCascadeLayers`](https://github.com/facebook/docusaurus/pull/11142): 啟用[ Docusaurus CSS 層疊層級插件](./plugins/plugin-css-cascade-layers.mdx)，並預設配置我們計劃在 Docusaurus v4 中應用的層級。
- `experimental_faster`: 包含加速 Docusaurus 構建的功能標誌物件。需將 `@docusaurus/faster` 套件加入您的網站依賴中。使用 `true` 作為啟用所有標誌的快捷方式。詳見 [Docusaurus Faster](https://github.com/facebook/docusaurus/issues/10556) 議題。可用功能標誌：
  - [`swcJsLoader`](https://github.com/facebook/docusaurus/pull/10435): 使用 [SWC](https://swc.rs/) 轉譯 JS（取代 [Babel](https://babeljs.io/)）。
  - [`swcJsMinimizer`](https://github.com/facebook/docusaurus/pull/10441): 使用 [SWC](https://swc.rs/) 最小化 JS（取代 [Terser](https://github.com/terser/terser)）。
  - [`swcHtmlMinimizer `](https://github.com/facebook/docusaurus/pull/10554): 使用 [SWC](https://swc.rs/) 最小化 HTML 及內聯 JS/CSS（取代 [html-minifier-terser](https://github.com/terser/html-minifier-terser)）。
  - [`lightningCssMinimizer`](https://github.com/facebook/docusaurus/pull/10522): 使用 [Lightning CSS](https://lightningcss.dev/) 最小化 CSS（取代 [cssnano](https://github.com/cssnano/cssnano) 和 [clean-css](https://github.com/clean-css/clean-css)）。
  - [`rspackBundler`](https://github.com/facebook/docusaurus/pull/10402): 使用 [Rspack](https://rspack.dev/) 打包您的應用（取代 [webpack](https://webpack.js.org/)）。
  - [`rspackPersistentCache`](https://github.com/facebook/docusaurus/pull/10931): 使用 [Rspack 持久化快取](https://rspack.dev/config/cache)加速後續構建。需啟用 `rspackBundler: true`。需在多次構建間保留 `./node_modules/.cache`。
  - [`mdxCrossCompilerCache`](https://github.com/facebook/docusaurus/pull/10479): 僅編譯 MDX 檔案一次，同時用於瀏覽器/Node.js 環境，而非兩次。
  - [`ssgWorkerThreads`](https://github.com/facebook/docusaurus/pull/10826): 使用 Node.js 工作執行緒池加速靜態網站生成階段。需啟用 `future.v4.removeLegacyPostBuildHeadAttribute`。
- `experimental_storage`: 全站瀏覽器儲存選項，主題開發者應盡量遵循。
  - `type`: 主題開發者應使用的瀏覽器儲存類型。可選值為 `localStorage` 和 `sessionStorage`。預設為 `localStorage`。
  - `namespace`: 是否為瀏覽器儲存鍵添加命名空間，避免當多個 Docusaurus 網站托管於相同網域或 localhost 時發生鍵衝突。可選值為 `string | boolean`。命名空間會附加在儲存鍵末尾 `key-namespace`。使用 `true` 會根據您的網站 `url + baseUrl` 自動生成隨機命名空間。預設為 `false`（無命名空間，歷史行為）。
- `experimental_router`: 使用的路由類型。可選值為 `browser` 和 `hash`。預設為 `browser`。`hash` 路由僅適用於特殊情況，例如您希望退出靜態網站生成，建立完全客戶端應用且僅有單一 `index.html` 入口檔案。這對於將 Docusaurus 網站打包為 `.zip` 壓縮檔並[無需運行網頁伺服器即可本地瀏覽](https://github.com/facebook/docusaurus/issues/3825)的情況很有用。

### `noIndex` {#noIndex}

- 類型：`boolean`

此選項會在每個頁面添加 `<meta name="robots" content="noindex, nofollow">`，告知搜尋引擎避免索引您的網站（更多資訊請參閱[此處](https://moz.com/learn/seo/robots-meta-directives)）。

範例：

```js title="docusaurus.config.js"
export default {
  noIndex: true, // Defaults to `false`
};
```

### `onBrokenLinks` {#onBrokenLinks}

- 類型：`'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 偵測到失效連結時的行為。

預設情況下會拋出錯誤，以確保您不會發布任何失效連結。

:::note

失效連結偵測僅在生產環境建置（`docusaurus build`）時可用。

:::

### `onBrokenAnchors` {#onBrokenAnchors}

- 類型：`'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 偵測到使用 Docusaurus 的 `Heading` 元件宣告的失效錨點時的行為。

預設情況下會顯示警告，讓您知曉失效錨點的存在。

### `onBrokenMarkdownLinks` {#onBrokenMarkdownLinks}

- 類型：`'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 偵測到失效的 Markdown 連結時的行為。

預設情況下會顯示警告，讓您知曉失效的 Markdown 連結。

### `onDuplicateRoutes` {#onDuplicateRoutes}

- 類型：`'ignore' | 'log' | 'warn' | 'throw'`

Docusaurus 偵測到[重複路由](/guides/creating-pages.mdx#duplicate-routes)時的行為。

預設情況下會在執行 `yarn start` 或 `yarn build` 後顯示警告。

### `tagline` {#tagline}

- 類型：`string`

您網站的標語。

```js title="docusaurus.config.js"
export default {
  tagline:
    'Docusaurus makes it easy to maintain Open Source documentation websites.',
};
```

### `organizationName` {#organizationName}

- 類型：`string`

擁有該儲存庫的 GitHub 使用者或組織。若未使用 `docusaurus deploy` 指令則無需設定此項。

```js title="docusaurus.config.js"
export default {
  // Docusaurus' organization is facebook
  organizationName: 'facebook',
};
```

### `projectName` {#projectName}

- 類型：`string`

GitHub 儲存庫的名稱。若未使用 `docusaurus deploy` 指令則無需設定此項。

```js title="docusaurus.config.js"
export default {
  projectName: 'docusaurus',
};
```

### `deploymentBranch` {#deploymentBranch}

- 類型：`string`

部署靜態檔案的分支名稱。若未使用 `docusaurus deploy` 指令則無需設定此項。

```js title="docusaurus.config.js"
export default {
  deploymentBranch: 'gh-pages',
};
```

### `githubHost` {#githubHost}

- 類型：`string`

伺服器的主機名稱。若使用 GitHub Enterprise 時會需要此設定。若未使用 `docusaurus deploy` 指令則無需設定此項。

```js title="docusaurus.config.js"
export default {
  githubHost: 'github.com',
};
```

### `githubPort` {#githubPort}

- 類型：`string`

伺服器的連接埠。若您使用 GitHub Enterprise 時會需要此設定。若未使用 `docusaurus deploy` 指令則無需設定。

```js title="docusaurus.config.js"
export default {
  githubPort: '22',
};
```

### `themeConfig` {#themeConfig}

- 類型: `Object`

用於自訂網站 UI（如導航欄和頁尾）的[主題設定物件](./themes/theme-configuration.mdx)。

範例:

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    docs: {
      sidebar: {
        hideable: false,
        autoCollapseCategories: false,
      },
    },
    colorMode: {
      defaultMode: 'light',
      disableSwitch: false,
      respectPrefersColorScheme: true,
    },
    navbar: {
      title: 'Site Title',
      logo: {
        alt: 'Site Logo',
        src: 'img/logo.svg',
        width: 32,
        height: 32,
      },
      items: [
        {
          to: 'docs/docusaurus.config.js',
          activeBasePath: 'docs',
          label: 'docusaurus.config.js',
          position: 'left',
        },
        // ... other links
      ],
    },
    footer: {
      style: 'dark',
      links: [
        {
          title: 'Docs',
          items: [
            {
              label: 'Docs',
              to: 'docs/doc1',
            },
          ],
        },
        // ... other links
      ],
      logo: {
        alt: 'Meta Open Source Logo',
        src: 'img/meta_oss_logo.png',
        href: 'https://opensource.fb.com',
        width: 160,
        height: 51,
      },
      copyright: `Copyright © ${new Date().getFullYear()} Facebook, Inc.`, // You can also put own HTML here
    },
  },
};
```

### `plugins` {#plugins}

- 類型: `PluginConfig[]`

```ts
type PluginConfig = string | [string, any] | PluginModule | [PluginModule, any];
```

參見[插件方法參考](./plugin-methods/README.mdx)了解 `PluginModule` 的結構。

```js title="docusaurus.config.js"
export default {
  plugins: [
    'docusaurus-plugin-awesome',
    ['docusuarus-plugin-confetti', {fancy: false}],
    () => ({
      postBuild() {
        console.log('Build finished');
      },
    }),
  ],
};
```

### `themes` {#themes}

- 類型: `PluginConfig[]`

```js title="docusaurus.config.js"
export default {
  themes: ['@docusaurus/theme-classic'],
};
```

### `presets` {#presets}

- 類型: `PresetConfig[]`

```ts
type PresetConfig = string | [string, any];
```

```js title="docusaurus.config.js"
export default {
  presets: [],
};
```

### `markdown` {#markdown}

Docusaurus 的全域 Markdown 設定。

- 類型: `MarkdownConfig`

```ts
type MarkdownPreprocessor = (args: {
  filePath: string;
  fileContent: string;
}) => string;

type MDX1CompatOptions =
  | boolean
  | {
      comments: boolean;
      admonitions: boolean;
      headingIds: boolean;
    };

export type ParseFrontMatter = (params: {
  filePath: string;
  fileContent: string;
  defaultParseFrontMatter: ParseFrontMatter;
}) => Promise<{
  frontMatter: {[key: string]: unknown};
  content: string;
}>;

type MarkdownAnchorsConfig = {
  maintainCase: boolean;
};

type MarkdownConfig = {
  format: 'mdx' | 'md' | 'detect';
  mermaid: boolean;
  preprocessor?: MarkdownPreprocessor;
  parseFrontMatter?: ParseFrontMatter;
  mdx1Compat: MDX1CompatOptions;
  remarkRehypeOptions: object; // see https://github.com/remarkjs/remark-rehype#options
  anchors: MarkdownAnchorsConfig;
};
```

範例:

```js title="docusaurus.config.js"
export default {
  markdown: {
    format: 'mdx',
    mermaid: true,
    preprocessor: ({filePath, fileContent}) => {
      return fileContent.replaceAll('{{MY_VAR}}', 'MY_VALUE');
    },
    parseFrontMatter: async (params) => {
      const result = await params.defaultParseFrontMatter(params);
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');
      return result;
    },
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
    anchors: {
      maintainCase: true,
    },
  },
};
```

```mdx-code-block
<APITable>
```

| Name | Type | Default | Description |
| --- | --- | --- | --- |
| `format` | `'mdx' \| 'md' \| 'detect'` | `'mdx'` | The default parser format to use for Markdown content. Using 'detect' will select the appropriate format automatically based on file extensions: `.md` vs `.mdx`. |
| `mermaid` | `boolean` | `false` | When `true`, allows Docusaurus to render Markdown code blocks with `mermaid` language as Mermaid diagrams. |
| `preprocessor` | `MarkdownPreprocessor` | `undefined` | Gives you the ability to alter the Markdown content string before parsing. Use it as a last-resort escape hatch or workaround: it is almost always better to implement a Remark/Rehype plugin. |
| `parseFrontMatter` | `ParseFrontMatter` | `undefined` | Gives you the ability to provide your own front matter parser, or to enhance the default parser. Read our [front matter guide](../guides/markdown-features/markdown-features-intro.mdx#front-matter) for details. |
| `mdx1Compat` | `MDX1CompatOptions` | `{comments: true, admonitions: true, headingIds: true}` | Compatibility options to make it easier to upgrade to Docusaurus v3+. |
| `anchors` | `MarkdownAnchorsConfig` | `{maintainCase: false}` | Options to control the behavior of anchors generated from Markdown headings |
| `remarkRehypeOptions` | `object` | `undefined` | Makes it possible to pass custom [`remark-rehype` options](https://github.com/remarkjs/remark-rehype#options). |

```mdx-code-block
</APITable>
```

### `customFields` {#customFields}

Docusaurus 會防止 `docusaurus.config.js` 出現未知欄位。若要新增自訂欄位，需在 `customFields` 中定義。

- 類型: `Object`

```js title="docusaurus.config.js"
export default {
  customFields: {
    admin: 'endi',
    superman: 'lol',
  },
};
```

若嘗試在設定檔中添加未知欄位，將導致建置時發生錯誤：

```bash
Error: The field(s) 'foo', 'bar' are not recognized in docusaurus.config.js
```

### `staticDirectories` {#staticDirectories}

一組路徑陣列（相對於網站目錄或絕對路徑）。這些路徑下的檔案將被原樣複製到建置輸出目錄。

- 類型: `string[]`

範例:

```js title="docusaurus.config.js"
export default {
  staticDirectories: ['static'],
};
```

### `headTags` {#headTags}

一組將插入 HTML `<head>` 的標籤陣列。值必須是包含兩個屬性的物件：`tagName` 和 `attributes`。`tagName` 必須是決定所創建標籤類型的字串（例如 `"link"`）。`attributes` 必須是屬性-值的映射物件。

- 類型: `{ tagName: string; attributes: Object; }[]`

範例:

```js title="docusaurus.config.js"
export default {
  headTags: [
    {
      tagName: 'link',
      attributes: {
        rel: 'icon',
        href: '/img/docusaurus.png',
      },
    },
  ],
};
```

這將在生成的 HTML 中轉換為 `<link rel="icon" href="img/docusaurus.png" />`。

### `scripts` {#scripts}

一組要載入的腳本陣列。值可以是字串或屬性-值映射的純物件。`<script>` 標籤將被插入到 HTML `<head>` 中。若使用純物件，唯一必需的屬性是 `src`，其他屬性皆可允許（每個屬性應為布林值/字串值）。

請注意，此處添加的 `<script>` 會阻擋渲染，因此您可能需要在物件中添加 `async: true`/`defer: true`。

- 類型: `(string | Object)[]`

範例:

```js title="docusaurus.config.js"
export default {
  scripts: [
    // String format.
    'https://docusaurus.io/script.js',
    // Object format.
    {
      src: 'https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js',
      async: true,
    },
  ],
};
```

### `stylesheets` {#stylesheets}

一個用於載入 CSS 來源的陣列。值可以是字串或屬性-值映射的純物件。`<link>` 標籤將被插入到 HTML `<head>` 中。如果使用物件，唯一必需的屬性是 `href`，其他屬性皆可允許（每個屬性應為布林值/字串值）。

- 類型: `(string | Object)[]`

範例:

```js title="docusaurus.config.js"
export default {
  stylesheets: [
    // String format.
    'https://docusaurus.io/style.css',
    // Object format.
    {
      href: 'http://mydomain.com/style.css',
    },
  ],
};
```

:::info

預設情況下，`<link>` 標籤會帶有 `rel="stylesheet"`，但您可以明確添加自訂的 `rel` 值來注入任何類型的 `<link>` 標籤，不一定是樣式表。

:::

### `clientModules` {#clientModules}

一個要在網站全域載入的[客戶端模組](../advanced/client.mdx#client-modules)陣列。

範例:

```js title="docusaurus.config.js"
export default {
  clientModules: ['./mySiteGlobalJs.js', './mySiteGlobalCss.css'],
};
```

### `ssrTemplate` {#ssrTemplate}

一個以 [Eta 語法](https://eta.js.org/docs/syntax#syntax-overview)編寫的 HTML 模板，用於渲染您的應用程式。可用於設定 `body` 標籤的自訂屬性、額外的 `meta` 標籤、自訂 `viewport` 等。請注意，Docusaurus 依賴模板的正確結構才能正常運作，一旦您進行自訂，必須確保模板符合上游的要求。

- 類型: `string`

範例:

```js title="docusaurus.config.js"
export default {
  ssrTemplate: `<!DOCTYPE html>
<html <%~ it.htmlAttributes %>>
  <head>
    <meta charset="UTF-8">
    <meta name="generator" content="Docusaurus v<%= it.version %>">
    <% it.metaAttributes.forEach((metaAttribute) => { %>
      <%~ metaAttribute %>
    <% }); %>
    <%~ it.headTags %>
    <% it.stylesheets.forEach((stylesheet) => { %>
      <link rel="stylesheet" href="<%= it.baseUrl %><%= stylesheet %>" />
    <% }); %>
    <% it.scripts.forEach((script) => { %>
      <link rel="preload" href="<%= it.baseUrl %><%= script %>" as="script">
    <% }); %>
  </head>
  <body <%~ it.bodyAttributes %>>
    <%~ it.preBodyTags %>
    <div id="__docusaurus">
      <%~ it.appHtml %>
    </div>
    <% it.scripts.forEach((script) => { %>
      <script src="<%= it.baseUrl %><%= script %>"></script>
    <% }); %>
    <%~ it.postBodyTags %>
  </body>
</html>`,
};
```

### `titleDelimiter` {#titleDelimiter}

- 類型: `string`

將用作生成 `<title>` 標籤中的標題分隔符。

範例:

```js title="docusaurus.config.js"
export default {
  titleDelimiter: '🦖', // Defaults to `|`
};
```

### `baseUrlIssueBanner` {#baseUrlIssueBanner}

- 類型: `boolean`

啟用時，當網站無法載入 CSS 或 JavaScript 檔案時會顯示橫幅，這是非常常見的問題，通常與網站配置中錯誤的 `baseUrl` 有關。

範例:

```js title="docusaurus.config.js"
export default {
  baseUrlIssueBanner: true, // Defaults to `true`
};
```

![一個基本的 URL 問題橫幅範例。由於樣式表載入失敗，樣式非常原始。文字顯示「您的 Docusaurus 網站未正確載入...當前設定的 baseUrl = /（預設值）；建議嘗試 baseUrl = /build/](/img/baseUrlIssueBanner.png)

:::warning

此橫幅需要在所有資源因錯誤的 base URL 載入失敗時內聯 CSS/JS。

如果您有嚴格的[內容安全政策](https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP)，應將其禁用。

:::